Opened 12 years ago

Closed 12 years ago

#9846 closed bug (fixed)

[Expander] doesn't remember its settings anymore

Reported by: diver Owned by: bonefish
Priority: normal Milestone: R1
Component: Applications/Expander Version: R1/Package Management
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

This is 5a7d7bc Haiku.PM

Change History (1)

comment:1 by bonefish, 12 years ago

Resolution: fixed
Status: newclosed

Fixed in 178d2f9fb9b9c8d03bd220e5be0564b0bc74ff02.

Note: See TracTickets for help on using tickets.