Expander: create settings directory, if necessary

Fixes #9846.